# vkIndividualTask

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
include/indTask/: greek.h
lib/: CMakeLists.txt  ECG.c  ECG.h  lib.h  lib_parallel.c  lib_static.c
src/: greek.c  main.c
stress_test/: CMakeLists.txt  main.c  stress_test.c  stress_test.h
test/: CMakeLists.txt  digit.cpp  feeder_ok.cpp  feeder_wrong.cpp  test.txt
unit_test/: CMakeLists.txt  input_test.cpp  parallel_test.cpp  static_test.cpp
utils/: CMakeLists.txt  utilities.c  utilities.h
